; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/subdev/ltc/extr_gf100.c_gf100_ltc_invalidate.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/subdev/ltc/extr_gf100.c_gf100_ltc_invalidate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvkm_ltc = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.nvkm_device* }
%struct.nvkm_device = type { i32 }

@.str = private unnamed_addr constant [29 x i8] c"LTC invalidate took %lld ns\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gf100_ltc_invalidate(%struct.nvkm_ltc* %0) #0 {
  %2 = alloca %struct.nvkm_ltc*, align 8
  %3 = alloca %struct.nvkm_device*, align 8
  %4 = alloca i64, align 8
  store %struct.nvkm_ltc* %0, %struct.nvkm_ltc** %2, align 8
  %5 = load %struct.nvkm_ltc*, %struct.nvkm_ltc** %2, align 8
  %6 = getelementptr inbounds %struct.nvkm_ltc, %struct.nvkm_ltc* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load %struct.nvkm_device*, %struct.nvkm_device** %7, align 8
  store %struct.nvkm_device* %8, %struct.nvkm_device** %3, align 8
  %9 = load %struct.nvkm_device*, %struct.nvkm_device** %3, align 8
  %10 = call i32 @nvkm_wr32(%struct.nvkm_device* %9, i32 458756, i32 1)
  %11 = load %struct.nvkm_device*, %struct.nvkm_device** %3, align 8
  %12 = call i64 @nvkm_wait_msec(%struct.nvkm_device* %11, i32 2000, i32 458756, i32 3, i32 0)
  store i64 %12, i64* %4, align 8
  %13 = load i64, i64* %4, align 8
  %14 = icmp sgt i64 %13, 0
  br i1 %14, label %15, label %20

15:                                               ; preds = %1
  %16 = load %struct.nvkm_ltc*, %struct.nvkm_ltc** %2, align 8
  %17 = getelementptr inbounds %struct.nvkm_ltc, %struct.nvkm_ltc* %16, i32 0, i32 0
  %18 = load i64, i64* %4, align 8
  %19 = call i32 @nvkm_debug(%struct.TYPE_2__* %17, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0), i64 %18)
  br label %20

20:                                               ; preds = %15, %1
  ret void
}

declare dso_local i32 @nvkm_wr32(%struct.nvkm_device*, i32, i32) #1

declare dso_local i64 @nvkm_wait_msec(%struct.nvkm_device*, i32, i32, i32, i32) #1

declare dso_local i32 @nvkm_debug(%struct.TYPE_2__*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
